MDEV-25151 JSON_TABLE: Unexpectedly padded values in a PATH column.

Field length can increase after the change_charset(), so need to
set field->ptr properly.

also sensitive parts of the test moved to json_not_embedded.test.